ARROW-15822: [C++] Cast duration to string (thus CSV writing) not supported (#14450)

See: [ARROW-15822](https://issues.apache.org/jira/browse/ARROW-15822).

Authored-by: benibus <bpharks@gmx.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>