cpp/src/arrow/compute/kernels/scalar_cast_string.cc
@@ -424,11 +424,13 @@ void AddDecimalToStringCasts(CastFunction* func) {
 template <typename OutType>
 void AddTemporalToStringCasts(CastFunction* func) {
   auto out_ty = TypeTraits<OutType>::type_singleton();
-  for (const std::shared_ptr<DataType>& in_ty : TemporalTypes()) {
-    DCHECK_OK(
-        func->AddKernel(in_ty->id(), {InputType(in_ty->id())}, out_ty,
-                        GenerateTemporal<TemporalToStringCastFunctor, OutType>(*in_ty),
-                        NullHandling::COMPUTED_NO_PREALLOCATE));
+  for (const auto& types : {TemporalTypes(), DurationTypes()}) {
+    for (const std::shared_ptr<DataType>& in_ty : types) {
+      DCHECK_OK(
+          func->AddKernel(in_ty->id(), {InputType(in_ty->id())}, out_ty,
+                          GenerateTemporal<TemporalToStringCastFunctor, OutType>(*in_ty),
+                          NullHandling::COMPUTED_NO_PREALLOCATE));
+    }
   }
 }
 
